# BreezeRESP

./: .gitignore  .gitkeep  LICENSE  README.md  README_EN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
scripts/: sync-version.mjs
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  license.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cascade.rs  connection.rs  metrics.rs  mod.rs  pipeline.rs  pubsub.rs  sandbox.rs
src-tauri/src/core/: config_store.rs  crypto.rs  format.rs  keystore.rs  metrics.rs  mod.rs  pipeline_store.rs  pool.rs  prefetch.rs  pubsub_manager.rs  shadow_store.rs  validate.rs
src/assets/: main.css
src/components/cascade/: KeyTreeItem.vue
src/components/charts/: QpsChart.vue  TtlGauge.vue
src/components/layout/: AppHeader.vue  AppSidebar.vue  StatusBar.vue
src/components/shared/: ConfirmDialog.vue  (+5 more)
src/i18n/: en.json  index.ts  zh-CN.json
src/mocks/: data.ts
src/router/: index.ts
src/services/: tauriApi.ts
src/stores/: cascadeStore.ts  connectionStore.ts  detailStore.ts  historyStore.ts  metricsStore.ts  pipelineStore.ts  pubsubStore.ts  sandboxStore.ts
src/types/: index.ts
src/utils/: commandTemplates.ts  copyTip.ts  format.ts  rollbackInverse.ts  saveTip.ts  toast.ts  uiSettings.ts
src/views/: BrowserPage.vue  ConnectionPage.vue  HistoryPage.vue  PipelinePage.vue  PubSubPage.vue  SandboxPage.vue
